Remove dependency on default theme class wrappers. Address issues with z-index and box-shadow 'glow' around date picker cell editor in default theme.

--- a/src/app/public/modules/ag-grid/cell-editors/cell-editor-datepicker/cell-editor-datepicker.component.scss
+++ b/src/app/public/modules/ag-grid/cell-editors/cell-editor-datepicker/cell-editor-datepicker.component.scss
@@ -2,42 +2,39 @@
 @import '~@skyux/theme/scss/_compat/mixins';
 @import '~@blackbaud/skyux-design-tokens/scss/themes/modern/variables';
 
-@include sky-theme-modern {
-  .sky-ag-grid-cell-editor-datepicker {
-    sky-datepicker {
-      input.sky-form-control {
-        border-radius: 0;
-        border: 1px solid $sky-theme-modern-color-blue-74;
-        box-shadow: none;
+.sky-ag-grid-cell-editor-datepicker {
+  position: relative;
+  top: 1px;
+  left: 1px;
 
-        &:focus {
-          border-width: 2px !important;
-        }
-      }
+  sky-datepicker {
+    input.sky-form-control {
+      box-shadow: none;
+      border-width: 1px;
+      border-style: solid;
+      border-color: transparent $sky-border-color-neutral-medium transparent transparent;
+    }
 
-      .sky-input-group-datepicker-btn {
-        border-radius: 0;
-      }
+    .sky-input-group-datepicker-btn {
+      border-radius: 0;
     }
   }
 }
 
-.sky-theme-default,
-:host-context(.sky-theme-default) {
+@include sky-theme-modern {
   .sky-ag-grid-cell-editor-datepicker {
-    position: relative;
-    top: 1px;
-    left: 1px;
+    position: static;
+    top: initial;
+    left: initial;
 
     sky-datepicker {
       input.sky-form-control {
-        border: none;
-        box-shadow: none;
-        border-right: 1px solid $sky-border-color-neutral-medium;
-      }
-
-      .sky-input-group-datepicker-btn {
         border-radius: 0;
+        border: 1px solid $sky-theme-modern-color-blue-74;
+
+        &:focus {
+          border-width: 2px !important;
+        }
       }
     }
   }
